<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <Button android:id="@+id/rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rss"
        android:textSize="15sp"/>

    <Button  android:id="@+id/treehole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nangua"
        android:textSize="15sp"
        android:layout_toRightOf="@id/rss"/>

    <Button android:id="@+id/schedule"
        android:layout_below="@id/rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textSize="15sp"/>
    
    <Button android:id="@+id/userlocation"
        android:layout_below="@id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="地理位置"
        android:textSize="15sp"/>

</RelativeLayout>