<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="262dp"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:padding="10dp" >

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="#333333"
            android:background="#ffffff"
            android:textSize="20sp" />

        <View
            android:id="@+id/cancle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/icon_delete" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|right"
            android:text="@string/rkls"
            android:background="#ffffff"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:background="#ffffff"
            android:paddingRight="10dp"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center_vertical|right"
            android:text="@string/sj"
            android:background="#ffffff"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#ffffff"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:gravity="center_vertical|right"
            android:text="@string/dd"
            android:background="#ffffff"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#ffffff"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center_vertical|right"
            android:text="@string/zs"
            android:background="#ffffff"
            android:textColor="#333333" />

        <TextView
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#ffffff"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="#d8d8d8" >

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="1px"
            android:layout_marginTop="1px"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/sckc"
            android:textColor="@drawable/bt_pubcolor_tv" />

        <Button
            android:id="@+id/qd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="1px"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/qd"
            android:textColor="@drawable/bt_pubcolor_tv" />
    </LinearLayout>

</LinearLayout>